hphp/hack/test/typecheck/magic_methods/magic_callStatic.php.exp
File "magic_callStatic.php", line 4, characters 3-37:
Magic `__callStatic` methods are no longer supported (Parsing[1002])
