hphp/hack/test/typecheck/magic_methods/magic_callStatic.php
<?hh

class C {
  public function __callStatic():void {}
}
